"x" alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ button {
 	background-color: #630657;
 	padding: 10px;
 	border: 0;
+	margin: 0;
 }
 
 .unchecked, .checked {
